# holm-marketing

./: .gitignore  Dockerfile.fedi-studio  FOLLOWGRAPH_DEPLOYMENT.md  README.md  STATUS.md  pyproject.toml
k8s/: candidate-finder-deployment.yaml  fedi-studio-firehose-deployment.yaml  fedi-studio-lead-crawler-deployment.yaml  fedi-studio-pull-tim-outbox-deployment.yaml  fedi-studio-sync-v1-to-v2-deployment.yaml  fedi-studio-web-deployment.yaml  kustomization.yaml
migrations/: 001_init.sql  002_mentions.sql  003_candidates.sql  004_candidates_pending.sql  005_candidates_last_enriched.sql  006_leads_last_crawled.sql  007_followgraph.sql  008_instance_throttle.sql
scripts/: active_learn.py  explore_weights.py  rescore_candidates_v2.py  run_score_all_loop.sh  smoke_test_scorer.py  supervisor.sh  train_classifier.py  validate_candidate_weights.py
src/fedi_studio/: __init__.py
src/fedi_studio/services/: drafter.py  embedder.py  scorer.py
src/fedi_studio/web/: app.py
src/fedi_studio/web/static/: style.css
src/fedi_studio/web/templates/: candidates.html  draft.html  intro_wizard.html  people.html  relationships.html  review.html  review_empty.html  stats.html  today.html  weekly.html
src/fedi_studio/workers/: backfill_v1_scores.py  build_candidates.py  bulk_import_v1.py  draft_pending.py  embed_unembedded.py  enrich_pending_candidates.py  firehose.py  follow_graph_crawler.py  ingest_v1.py  instance_streamer.py  lead_crawler.py  pull_home.py  pull_mentions.py  pull_tags.py  pull_tim_outbox.py  score_all.py  sync_v1_to_v2.py
