[project]
name = "fedi-studio"
version = "0.1.0"
description = "Mastodon reading and posting assistant. Companion to my own presence on holm.community. NOT a bot."
requires-python = ">=3.12"
authors = [
    { name = "Tim", email = "tim@holm.chat" },
]
license = { text = "AGPL-3.0" }
readme = "README.md"

dependencies = [
    # Core web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
    "httpx>=0.28",

    # Database
    "psycopg[binary,pool]>=3.2",

    # ML / scoring
    "model2vec>=0.6",
    "scikit-learn>=1.5",
    "numpy>=2.0",

    # Utility
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "tomli-w>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
    "ipython>=8.30",
]
nats = [
    "nats-py>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fedi_studio"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
